tests/rustdoc-ui/unportable-markdown.stderr
error: unportable markdown
  --> $DIR/unportable-markdown.rs:21:10
   |
LL | /// test [^foo][^bar]
   |          ^^^^^^
   |
   = help: confusing footnote reference and link
note: the lint level is defined here
  --> $DIR/unportable-markdown.rs:8:9
   |
LL | #![deny(rustdoc::unportable_markdown)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: if it should not be a footnote, escape it
   |
LL | /// test \[^foo][^bar]
   |          +
help: if the footnote is intended, add a space
   |
LL | /// test [^foo] [^bar]
   |                +

error: unportable markdown
  --> $DIR/unportable-markdown.rs:49:5
   |
LL | /// >bar
   |     ^
   |
   = help: confusing block quote with no space after the `>` marker
help: if the quote is intended, add a space
   |
LL | /// > bar
   |      +
help: if it should not be a quote, escape it
   |
LL | /// \>bar
   |     +

error: aborting due to 2 previous errors

